ipc/ipdl/test/ipdl/error/undefSelfRecStruct.ipdl
struct X { X x; };

protocol undefSelfRecStruct {
child: async __delete__(X x);
};
